mule-user-guide/v/3.8/batch-job-instance-id.adoc
= Batch Job Instance ID
:keywords: connectors, anypoint, studio, esb, batch, batch processing

Users of link:/mule-user-guide/v/3.8/batch-processing[Batch] processing frequently need the ability to determine a Batch job's instance ID during the execution phases of a Batch job.

*Note*: This feature only works in Mule 3.7 and newer.

The Batch job instance ID is useful to:

* Pass the local job instance ID to an external system for referencing and managing data
* Improve the job’s custom logging
* Send email or SMS notifications for meaningful events

== Example

Mule exposes the batch job instance ID through a flow variable of key `batchJobInstanceId`. That flow variable is available at the beginning of the input phase. The flow variable is also available in every step and in the on-complete phase.

Example job:

image:batch.png[batch]

As you see this job is pretty simple. In each of its phases, the job invokes a sub­flow which logs the output of the following MEL expression:

[source, code, linenums]
----
#[flowVars[‘batchJobInstanceId’]]
----

The log output produces the following – note the second block where the Job Instance ID appears as: 

org.mule.api.processor.LoggerMessageProcessor: Job Instance Id is: ba01e1a0-f5c7-11e4-9414-10ddb1daeb6d

[source, code, linenums]
----
INFO 2015-05-08 18:18:09,599 [[batch].HTTP_Listener_Configuration.worker.01] com.mulesoft.module.batch.engine.DefaultBatchEngine: Starting input phase

INFO 2015-05-08 18:18:09,603 [[batch].HTTP_Listener_Configuration.worker.01] org.mule.api.processor.LoggerMessageProcessor: Job Instance Id is: ba01e1a0-f5c7-11e4-9414-10ddb1daeb6d

INFO 2015-05-08 18:18:09,603 [[batch].HTTP_Listener_Configuration.worker.01] com.mulesoft.module.batch.engine.DefaultBatchEngine: Input phase completed

INFO 2015-05-08 18:18:09,608 [[batch].HTTP_Listener_Configuration.worker.01] com.mulesoft.module.batch.engine.queue.BatchQueueLoader: Starting loading phase for instance 'ba01e1a0-f5c7-11e4-9414-10ddb1daeb6d' of job 'batchBatch'

INFO 2015-05-08 18:18:09,610 [[batch].HTTP_Listener_Configuration.worker.01] com.mulesoft.module.batch.engine.queue.BatchQueueLoader: Finished loading phase for instance ba01e1a0-f5c7-11e4-9414-10ddb1daeb6d of job batchBatch. 1 records were loaded

INFO 2015-05-08 18:18:09,615 [[batch].HTTP_Listener_Configuration.worker.01] com.mulesoft.module.batch.engine.DefaultBatchEngine: Started execution of instance 'ba01e1a0-f5c7-11e4-9414-10ddb1daeb6d' of job 'batchBatch'

INFO 2015-05-08 18:18:09,624 [batch-job-batchBatch-work-manager.01] org.mule.api.processor.LoggerMessageProcessor: Job Instance Id is: ba01e1a0-f5c7-11e4-9414-10ddb1daeb6d

INFO 2015-05-08 18:18:09,643 [batch-job-batchBatch-work-manager.01] com.mulesoft.module.batch.engine.DefaultBatchEngine: Starting execution of onComplete phase for instance ba01e1a0-f5c7-11e4-9414-10ddb1daeb6d of job batchBatch

INFO 2015-05-08 18:18:09,644 [batch-job-batchBatch-work-manager.01] org.mule.api.processor.LoggerMessageProcessor: Job Instance Id is: ba01e1a0-f5c7-11e4-9414-10ddb1daeb6d

INFO 2015-05-08 18:18:09,644 [batch-job-batchBatch-work-manager.01] com.mulesoft.module.batch.engine.DefaultBatchEngine: Finished execution of onComplete phase for instance ba01e1a0-f5c7-11e4-9414-10ddb1daeb6d of job batchBatch

INFO 2015-05-08 18:18:09,644 [batch-job-batchBatch-work-manager.01] com.mulesoft.module.batch.engine.DefaultBatchEngine: Finished execution for instance 'ba01e1a0-f5c7-11e4-9414-10ddb1daeb6d' of job 'batchBatch'. Total Records processed: 1. Successful records: 1. Failed Records: 0
----

== Custom Batch Job Instance ID

You can use a Mule expression to specify a unique identifier for each batch job by passing a *Job Instance Id* attribute that takes a MEL expression. +
Note that constant values are not allowed for batch jobs and if the MEL expression returns a previously seen value, Mule throws an exception and does not create the job instance.
If you don't set a job instance ID, Mule auto generates a UUID to assign to your instance.

The UUID generated for the job instance described above is `ba01e1a0-f5c7-11e4-9414-10ddb1daeb6d`. As you can tell, it's not a human readable identifier making it hard to correlate to an actual execution and considering you could be running multiple jobs at the same time, this ID is not meaningful at all.

In order to guarantee uniqueness, you can set the Job Id to take server date through the MEL expression: +
`#['Job From ' + server.dateTime.format('dd/MM/yy hh:mm:ss') + '.' ]`.

This names the execution instance `Job From 15/01/16 05:23:12`.

[source, source, linenums]
----
com.mulesoft.module.batch.engine.DefaultBatchEngine: Created instance Job From 15/01/16 05:23:12 for batch job contacts-to-SFDCBatch
com.mulesoft.module.batch.engine.DefaultBatchEngine: Starting input phase
com.mulesoft.module.batch.engine.DefaultBatchEngine: Input phase completed
com.mulesoft.module.batch.engine.queue.BatchQueueLoader: Starting loading phase for instance 'Job From 15/01/16 05:23:12' of job 'contacts-to-SFDCBatch'
com.mulesoft.module.batch.engine.queue.BatchQueueLoader: Finished loading phase for instance Job From 15/01/16 05:23:12 of job contacts-to-SFDCBatch. 3 records were loaded
com.mulesoft.module.batch.engine.DefaultBatchEngine: Started execution of instance 'Job From 15/01/16 05:23:12' of job 'contacts-to-SFDCBatch'
----

The logs of a properly identified instance are easier to read.

The batch job properties tab, now looks like this:
[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:batchJobProperties.png[batchJobProperties]
....
[tab,title="XML Editor"]
....
[source, xml, linenums]
----
<batch:job name="batchBatch" job-instance-id="#['Job From ' + server.dateTime.format('dd/MM/yy hh:mm:ss') + '.' ]">
        <batch:input>
            <http:listener config-ref="HTTP_Listener_Configuration" path="/" doc:name="HTTP"/>
            <set-payload doc:name="Set Payload"/>
            <flow-ref name="logJobInstanceId" doc:name="logJobInstanceId"/>
        </batch:input>
        <batch:process-records>
            <batch:step name="Batch_Step">
                <flow-ref name="logJobInstanceId" doc:name="logJobInstanceId"/>
            </batch:step>
        </batch:process-records>
        <batch:on-complete>
            <flow-ref name="logJobInstanceId" doc:name="logJobInstanceId"/>
        </batch:on-complete>
    </batch:job>
----
....
------

== See Also

* View  link:https://gist.github.com/marianogonzalez/b1568e44a56f07b067b5#file-gistfile1-irclog[gistfile1.irclog]  hosted on  https://github.com/[GitHub]
* link:http://blogs.mulesoft.com/batch-module-reloaded/[Batch Module Reloaded]
* link:http://blogs.mulesoft.com/handle-errors-batch-job/[Handle Errors in your Batch Job… Like a Champ!]
* link:http://blogs.mulesoft.com/mule-how-to-batch-enabled-cloud-connector/[Mule How-to: Build a Batch Enabled Cloud Connector]
